Solved Text Spillage Issue.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
 {
   background: linear-gradient(#5151c5, #8088e4);
     width: 100%;
-    height: 950px;
+    height: auto;
+    padding-bottom: 3%;
     /* background: repeating-linear-gradient(
         90deg,
         #9D44C0,
@@ -62,7 +63,7 @@
 {
     font-size: 18px;
     color: #c0c0c0;
-    font-weight: 500;
+    font-weight: bold;
     text-decoration: none;
     padding-left: 10px;
     padding-right: 10px;
@@ -263,7 +264,6 @@ c:where(:hover, :focus-visible)
     display: inline-block;
     margin-right: 35px;
     font-size: 400%;
-
 }
 @keyframes wave 
 {
@@ -383,7 +383,7 @@ c:where(:hover, :focus-visible)
   background-color: #e0e0e0;
   background-image: linear-gradient(180deg, #c4bfda 0%, #f5f7fa 30%);
   width: 100%;
-  height: 905px;
+  height: auto;
   padding-bottom: 10%;
 }
 
@@ -415,5 +415,3 @@ c:where(:hover, :focus-visible)
   margin-right: 20%;
   font-weight: bold;
 }
-
-
